# freezing-batman

environment/interpretation/dummy_navigator/: CMakeLists.txt  package.xml
environment/interpretation/lane_detector/: CMakeLists.txt  package.xml
environment/interpretation/lane_detector/data/: -  -s  Samples  Samples1  Samples1.model  equatest  equatest.model  tsc12015  tsc12015.model  tsc1205  tsc2015  tsc2015.model
environment/interpretation/lane_detector/launch/: module.launch
environment/interpretation/lane_detector/src/: mapping.cpp
environment/interpretation/lane_detector/src/detector/: inversePerspectiveTransform.cpp  laneDetector.cpp
environment/interpretation/lane_detector/src/learner/: generateSamples.cpp
environment/interpretation/lane_navigator/src/: lane_navigator.cpp
environment/interpretation/nose_navigator/: CMakeLists.txt  package.xml
environment/interpretation/waypoint_navigator/: CMakeLists.txt  package.xml
environment/interpretation/waypoint_selector/: CMakeLists.txt  package.xml
environment/sensing/logitech_camera/launch/: module.launch
planning/motion_planning/local_planner/: CMakeLists.txt  package.xml
planning/motion_planning/local_planner/include/: local_planner.hpp
planning/motion_planning/local_planner/launch/: unit_test.launch
planning/motion_planning/local_planner/src/: tester.cpp
planning/motion_planning/local_planner/src/a_star_seed/: generator.cpp
planning/motion_planning/showpath_debugger/: CMakeLists.txt  package.xml
robot/pilots/eklavya3_pilot/: CMakeLists.txt  package.xml
robot/pilots/eklavya3_pilot/src/: eklavya3_pilot.cpp
