<package>
  <name>dummy_navigator</name>
  <description>

     dummy_navigator

  </description>
  <maintainer email="aranya.dan1996@gmail.com">Aranya Dan</maintainer>
  <author>Rohan Sur</author>
  <version>0.0.1</version>
  <license>BSD</license>
  <url>http://ros.org/wiki/dummy_navigator</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>

</package>
