<package>
    <name>lane_detector</name>
    <description>

        lane_detector

    </description>
    <maintainer email="krishna.bagadia2@gmail.com">Krishna Bagadia</maintainer>
    <author>jashan</author>
    <version>0.0.1</version>
    <license>BSD</license>
    <url>http://ros.org/wiki/lane_detector_test</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>agv_framework</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>agv_framework</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>cmake_modules</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>message_runtime</run_depend>

</package>


