<package>
    <name>showpath_debugger</name>
    <description>

        showpath_debugger

    </description>
    <maintainer email="aranya.dan1996@gmail.com">Aranya</maintainer>
    <author>Yash</author>
    <version>0.0.1</version>
    <license>BSD</license>

    <url>http://ros.org/wiki/showpath_debugger</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>local_planner</build_depend>



    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>local_planner</run_depend>

</package>
