<package>
  <name>eklavya3_pilot</name>
  <version>1.13.0</version>
  <description>

        Pilot for Eklavya.

    </description>
    <author>Aranya Dan</author>
    <maintainer email="aranya.dan1996@gmail.com">Aranya</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/eklavya3_pilot</url>
  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>voxel_grid</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>

    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>rosconsole</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>voxel_grid</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>

    <run_depend>pcl_ros</run_depend>

    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>message_generation</run_depend>


  <!--<depend package="local_planner"/>-->

</package>
